Add ticket-handling in API
